# 02-segmentation-UNet

./: .gitignore  Makefile  main.py  pyproject.toml
docs/: README.md  mermaid_graph_source.txt
model/: config.py  dataset.py  network.py
output/: best_model.pth  test_data.csv
src/: param_handler.py  predict.py  train.py
